added verified mark

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <button class="btn">All</button> -->
         </section>
         <!-- vdo section -->
-        <section id="vdoSection" class="grid lg:grid-cols-4 gap-6">
+        <section id="vdoSection" class="grid lg:grid-cols-4 gap-6 my-8">
           <!--  -->
           <!-- <div class="card bg-base-100 shadow-xl">
             <figure>
